--- a/server/package.json
+++ b/server/package.json
@@ -146,7 +146,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
   },
   "author": "",
   "license": "ISC"
