--- a/server/package.json
+++ b/server/package.json
@@ -144,11 +144,13 @@
     "whatwg-url": "^11.0.0"
   },
   "devDependencies": {},
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC"
 }
