--- a/server/package.json
+++ b/server/package.json
@@ -1,156 +1,43 @@
 {
-  "name": "server",
+  "name": "final-project-mavericks",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "abbrev": "^1.1.1",
-    "array-flatten": "^1.1.1",
-    "anymatch": "^3.1.3",
-    "accepts": "^1.3.8",
-    "balanced-match": "^1.0.2",
-    "base64-js": "^1.5.1",
-    "bcryptjs": "^2.4.3",
-    "binary-extensions": "^2.2.0",
-    "body-parser": "^1.20.1",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.2",
-    "bowser": "^2.11.0",
-    "buffer-equal-constant-time": "^1.0.1",
-    "buffer": "^5.7.1",
-    "bson": "^4.7.0",
-    "chokidar": "^3.5.3",
-    "bytes": "^3.1.2",
-    "concat-map": "^0.0.1",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.4",
-    "cookie": "^0.5.0",
-    "cookie-signature": "^1.0.6",
-    "debug": "^2.6.9",
-    "denque": "^2.1.0",
-    "depd": "^2.0.0",
-    "ecdsa-sig-formatter": "^1.0.11",
-    "destroy": "^1.2.0",
-    "dotenv": "^16.0.3",
-    "ee-first": "^1.1.1",
-    "call-bind": "^1.0.2",
-    "escape-html": "^1.0.3",
-    "encodeurl": "^1.0.2",
-    "fill-range": "^7.0.1",
-    "express": "^4.18.2",
-    "fast-xml-parser": "^4.0.11",
-    "etag": "^1.8.1",
-    "fresh": "^0.5.2",
-    "finalhandler": "^1.2.0",
-    "function-bind": "^1.1.1",
-    "fsevents": "^2.3.2",
-    "glob-parent": "^5.1.2",
-    "get-intrinsic": "^1.1.3",
-    "forwarded": "^0.2.0",
-    "has-flag": "^3.0.0",
-    "iconv-lite": "^0.4.24",
-    "has": "^1.0.3",
-    "has-symbols": "^1.0.3",
-    "http-errors": "^2.0.0",
-    "ignore-by-default": "^1.0.1",
-    "inherits": "^2.0.4",
-    "ip": "^2.0.0",
-    "ieee754": "^1.2.1",
-    "is-binary-path": "^2.1.0",
-    "is-extglob": "^2.1.1",
-    "ipaddr.js": "^1.9.1",
-    "js-tokens": "^4.0.0",
-    "is-number": "^7.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash.includes": "^4.3.0",
-    "is-glob": "^4.0.3",
-    "jwa": "^1.4.1",
-    "kareem": "^2.4.1",
-    "lodash.isinteger": "^4.0.4",
-    "lodash.isboolean": "^3.0.3",
-    "loose-envify": "^1.4.0",
-    "lodash.isnumber": "^3.0.3",
-    "lodash.once": "^4.1.1",
-    "lodash.isplainobject": "^4.0.6",
-    "media-typer": "^0.3.0",
-    "jws": "^3.2.2",
-    "memory-pager": "^1.5.0",
-    "mime-types": "^2.1.35",
-    "mime-db": "^1.52.0",
-    "minimatch": "^3.1.2",
-    "mongodb-connection-string-url": "^2.6.0",
-    "lodash.isstring": "^4.0.1",
-    "mime": "^1.6.0",
-    "methods": "^1.1.2",
-    "mpath": "^0.9.0",
-    "mongoose": "^6.7.5",
-    "mquery": "^4.0.3",
-    "mongodb": "^4.11.0",
-    "ms": "^2.0.0",
-    "negotiator": "^0.6.3",
-    "nodemon": "^2.0.20",
-    "normalize-path": "^3.0.0",
-    "nopt": "^1.0.10",
-    "object-assign": "^4.1.1",
-    "nodemailer": "^6.8.0",
-    "path-to-regexp": "^0.1.7",
-    "on-finished": "^2.4.1",
-    "picomatch": "^2.3.1",
-    "pstree.remy": "^1.1.8",
-    "object-inspect": "^1.12.2",
-    "parseurl": "^1.3.3",
-    "prop-types": "^15.8.1",
-    "qs": "^6.11.0",
-    "proxy-addr": "^2.0.7",
-    "punycode": "^2.1.1",
-    "merge-descriptors": "^1.0.1",
-    "range-parser": "^1.2.1",
-    "react-dom": "^18.2.0",
-    "react-is": "^16.13.1",
-    "raw-body": "^2.5.1",
-    "safe-buffer": "^5.2.1",
-    "readdirp": "^3.6.0",
-    "saslprep": "^1.0.3",
-    "safer-buffer": "^2.1.2",
-    "react-to-print": "^2.14.10",
-    "scheduler": "^0.23.0",
-    "semver": "^5.7.1",
-    "setprototypeof": "^1.2.0",
-    "send": "^0.18.0",
-    "react": "^18.2.0",
-    "side-channel": "^1.0.4",
-    "socks": "^2.7.1",
-    "simple-update-notifier": "^1.1.0",
-    "smart-buffer": "^4.2.0",
-    "sparse-bitfield": "^3.0.3",
-    "sift": "^16.0.1",
-    "stripe": "^11.1.0",
-    "strnum": "^1.0.5",
-    "touch": "^3.1.0",
-    "supports-color": "^5.5.0",
-    "statuses": "^2.0.1",
-    "toidentifier": "^1.0.1",
-    "tr46": "^3.0.0",
-    "type-is": "^1.6.18",
-    "tslib": "^2.4.1",
-    "undefsafe": "^2.0.5",
-    "to-regex-range": "^5.0.1",
-    "utils-merge": "^1.0.1",
-    "unpipe": "^1.0.0",
-    "vary": "^1.1.2",
-    "serve-static": "^1.15.0",
-    "uuid": "^9.0.0",
-    "webidl-conversions": "^7.0.0",
-    "whatwg-url": "^11.0.0"
+  "description": "final-project-mavericks created by GitHub Classroom",
+  "main": "index.js",
+  "engines":{
+    "node": "18.12.1",
+    "npm": "8.19.2"
   },
-  "devDependencies": {},
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    
+      "client-install": "npm install --prefix client",
+      "server": "nodemon server.js",
+      "client": "npm start --prefix client",
+      "dev": "concurrently \"npm run server\" \"npm run client\"",
+      "start": "node server.js",
+      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neu-mis-info6150-fall-2022/final-project-mavericks.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/neu-mis-info6150-fall-2022/final-project-mavericks/issues"
+  },
+  "homepage": "https://github.com/neu-mis-info6150-fall-2022/final-project-mavericks#readme",
+  "dependencies": {
+    "@stripe/stripe-js": "^1.46.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.5",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "react-to-print": "^2.14.10",
+    "stripe": "^11.1.0",
+    "uuid": "^9.0.0"
+  }
 }
